--- a/styles_v1.css
+++ b/styles_v1.css
@@ -84,9 +84,28 @@ main {
   margin-bottom: 20px; /* Add margin at the bottom to create space */
 }
 
+.video-section{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 3rem 1rem;
+  padding: 3rem 0;
+  margin: 0 1.5rem;
+  border-top: 4px solid #CCC;
+}
+
+.video-section:first_child (
+ border-top: none;
+}
+
 .thumbnail {
-  width: 100%;
-  height: 170px;
+  position: relative;
+  display flex;
+}
+
+.thumbnail::before{
+  content: attr(data-duration);
+  position: absolute;
+  background-color: rgba(0, 0, 0, .85);
 }
 
 .thumbnail img {
