--- a/styles_v1.css
+++ b/styles_v1.css
@@ -63,87 +63,89 @@ main {
   background-color: #f9f9f9;
 }
 
-.content {
-  background-color: #f9f9f9;
-  width: 100%;
-  height: 100%;
-  padding: 15px 15px;
-  border-top: 1px solid #ddd;
-  overflow-y: scroll;
-}
-
-.videos {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.video {
-  width: 270px;
-  margin-bottom: 20px; /* Add margin at the bottom to create space */
-}
-
 .video-section{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 3rem 1rem;
-  padding: 3rem 0;
-  margin: 0 1.5rem;
-  border-top: 4px solid #CCC;
-}
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 3rem 1rem;
+    padding: 3rem 0;
+    margin: 0 1.5rem;
+    border-top: 4px solid #CCC;
+  }
+  
+  .video-section:first_child {
+    border-top: none;
+  }
+  
+  .video-container{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .thumbnail {
+    position: relative;
+    display: flex;
+  }
+  
+  .thumbnail::before{
+    content: attr(data-duration);
+    position: absolute;
+    background-color: rgba(0, 0, 0, .85);
+    color: white;
+    right: 5px;
+    bottom: 5px;
+    padding: .1em .3em;
+    border-radius: .3em;
+    font-size: .9em;
+  }
 
-.video-section:first_child {
- border-top: none;
-}
+  .thumbnail-image{
+    width: 100%;
+    height: 100%;
+    min-width: 250px;
+    min-height: 150px;
+    background-color: #AAA;
+  }
 
-.thumbnail {
-  position: relative;
-  display: flex;
-}
+  .video-bottom-section{
+    display: flex;
+    align-items: flex-start;
+    margin-top: 1rem;
+  }
 
-.thumbnail::before{
-  content: attr(data-duration);
-  position: absolute;
-  background-color: rgba(0, 0, 0, .85);
-}
+  .channel-icon{
+    margin-right: .75rem;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    background-color: #AAA;
+  }
 
-.thumbnail img {
-  object-fit: cover;
-  height: 94%;
-  width: 100%;
-}
-.author img {
-  object-fit: cover;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  margin-right: 10px;
-}
+  .video-details{
+    display: flex;
+    flex-direction: column;
+  }
 
-.details {
-  display: flex;
-}
- 
-.title {
-  display: flex;
-  flex-direction: column;
-}
- 
-.title h3 {
-  color: rgb(3, 3, 3);
-  line-height: 18px;
-  font-size: 14px;
-  margin-bottom: 6px;
-}
- 
-.title a,
-span {
-  text-decoration: none;
-  color: rgb(96, 96, 96);
-  font-size: 12px;
-}
+  .video-title{
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-bottom: .5rem;
+    text-decoration: none;
+    color: black;
+  }
 
+  .video-channel-name{
+    margin-bottom: .1rem;
+    text-decoration: none;
+    transition: color 150ms;
+  }
+
+  .video-channel-name:hover{
+    color: #111;
+  }
+
+  .video-channel-name,.vide-metadata{
+    color: #555;
+  }
 
 /* Search section styles */
 .search {
