--- a/styles_v1.css
+++ b/styles_v1.css
@@ -65,10 +65,7 @@ hr {
     padding: 3rem 0;
     margin: 0 1.5rem;
     border-top: 4px solid #CCC;
-  }
-  
-  .video-section:first_child {
-    border-top: none;
+    justify-content: flex-end;
   }
   
   .video-container{
