--- a/styles_v1.css
+++ b/styles_v1.css
@@ -60,7 +60,7 @@ hr {
 
 .video-section{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: 1fr minmax(250px, 1fr);
     gap: 3rem 1rem;
     padding: 3rem 0;
     margin: 0 1.5rem;
