--- a/styles_v1.css
+++ b/styles_v1.css
@@ -58,15 +58,14 @@ hr {
 
 /* Main content styles */
 
-.video-section{
-    display: grid;
-    grid-template-columns: 1fr minmax(250px, 1fr);
-    gap: 3rem 1rem;
-    padding: 3rem 0;
-    margin: 0 1.5rem;
-    border-top: 4px solid #CCC;
-    justify-content: flex-end;
-  }
+.video-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 3rem 1rem;
+  padding: 3rem 0;
+  margin: 0 1.5rem 0 0; /* Adjusted the margin property */
+  border-top: 4px solid #CCC;
+}
   
   .video-container{
     display: flex;
