--- a/styles_v1.css
+++ b/styles_v1.css
@@ -62,6 +62,10 @@ hr {
   display: flex;
 }
 
+.videos {
+  margin-left: auto; /* Add this line to push videos to the right */
+}
+
 .video-section {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
