--- a/styles_v1.css
+++ b/styles_v1.css
@@ -65,6 +65,7 @@ hr {
 .videos {
   margin-left: auto; /* Add this line to push videos to the right */
   order: 1;
+  flex: 1;
 }
 
 .video-section {
