--- a/styles_v1.css
+++ b/styles_v1.css
@@ -204,6 +204,15 @@ hr {
   border-radius: 2px 0 0 2px;
 }
 
+.content{
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 15px 15px;
+  bodrder-top: 1px solid #dd;
+  overflow-y: scroll;
+}
+
 /* Styles for the search input when focused */
 input:focus {
   outline: none;
