--- a/styles_v2.css
+++ b/styles_v2.css
@@ -121,10 +121,12 @@ main{
 }
 
 .videos {
-  display: flex;
-  flex-direction: row;
-  juctify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 3rem 1rem;
+  padding: 3rem 0;
+  padding: 3rem 1.5rem 0 0; /* Adjusted the margin property */
+  border-top: 4px solid #CCC;
 }
 
 .video{
