--- a/styles_v2.css
+++ b/styles_v2.css
@@ -141,9 +141,11 @@ main{
     overflow: hidden;
   }
 .thumbnail img{
-    object-fit: cover;
-    height: 89%;
-    widht: 100%;
+    width: 100%;
+    height: 100%;
+    min-width: 250px;
+    min-height: 150px;
+    background-color: #AAA;
   }
 .author img{
   object-fit: cover;
