--- a/styles_v1.css
+++ b/styles_v1.css
@@ -64,11 +64,10 @@ hr {
 }
 
 .videos {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-column-gap: 15px;
-  grid-row-gap: 30px;
-  margin-top: 10px;
+  padding-left: 16%;
+  padding-right: 1%;
+  padding-bottom: 20px:
+  padding-top: 20px:
 }
 
 .video{
@@ -79,16 +78,37 @@ hr {
 .video-section {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 3rem 1rem;
-  padding: 3rem 0;
-  padding: 3rem 1.5rem 0 0; /* Adjusted the margin property */
-  border-top: 4px solid #CCC;
+  grid-column-gap: 15px;
+  grid-row-gap: 30px;
+  margin-top: 10px;
 }
   
-  .video-container{
-    display: flex;
-    flex-direction: column;
-  }
+.video-container .thumb{
+  width: 100%;
+  border-radius: 2%;
+}
+
+.video-container .flex-box img{
+  border-radius: 50%;
+  wight: 35px;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+.video-container .flex-box{
+  aligh-items: flex-start;
+  margin-top: 5px;
+}
+
+.video-details {
+  font-size: 14px;
+  color: #6a6a6a;
+}
+
+.video-details {
+  font-weight: 600;
+  display: block;
+}
   
   .thumbnail {
     position: relative;
