--- a/styles_v2.css
+++ b/styles_v2.css
@@ -117,6 +117,7 @@ main{
   height: 100%;
   padding: 15px 15px;
   bodrder-top: 1px solid #dd;
+  justify-content: space-between;
   overflow-y: scroll;
 }
 
