--- a/styles_v4.css
+++ b/styles_v4.css
@@ -1,461 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="styles.scss" />
-	</head>
-	<body>
-		<div class="searchBar">
-			<div class="logo">
-				<i>m</i>
-				<img
-					src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg"
-					alt=""
-				/>
-			</div>
-			<div class="search">
-				<form action="">
-					<input type="text" />
-					<button><i>Search</i></button>
-				</form>
-			</div>
-			<div class="icons">
-				<i>u</i>
-				<i>a</i>
-				<i>n</i>
-				<i>u</i>
-			</div>
-		</div>
-		<div class="mainBody">
-			<div class="categories">
-				<div class="categoriesSection">
-					<span class="category active">
-						<i class="icon">
-							H
-						</i>
-						<span>Home</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							T
-						</i>
-						<span>Trending</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							S
-						</i>
-						<span>Subscriptions</span>
-					</span>
-				</div>
-				<div class="categoriesSection">
-					<span class="category">
-						<i class="icon">
-							L
-						</i>
-						<span>Library</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							H
-						</i>
-						<span>History</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							YV
-						</i>
-						<span>Subscriptions</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							WL
-						</i>
-						<span>Watch later</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							LV
-						</i>
-						<span>Liked videos </span>
-					</span>
-				</div>
-				<div class="categoriesSection">
-					<h3>Subscriptions</h3>
-					<span class="category">
-						<i class="icon">
-							L
-						</i>
-						<span>name</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							H
-						</i>
-						<span>name</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							YV
-						</i>
-						<span>name</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							WL
-						</i>
-						<span>name</span>
-					</span>
-					<span class="category">
-						<i class="icon">
-							LV
-						</i>
-						<span>name</span>
-					</span>
-				</div>
-			</div>
-			<div class="videos">
-				<div class="videosGrid">
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-					<div class="video">
-						<div class="thumbnail">
-							<img
-								src="https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?ixlib=rb-1.2.1&auto=format&fit=crop&w=2613&q=80"
-								alt=""
-							/>
-						</div>
-						<div class="details">
-							<div class="author">
-								<img
-									src="https://images.unsplash.com/photo-1521146764736-56c929d59c83?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
-									alt=""
-								/>
-							</div>
-							<div class="text">
-								<h3>How to build a youtube video</h3>
-								<a href="#">Adamthedev</a>
-								<span>Views 10</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+:root {
+	--color-greyBg: #f9f9f9;
+	--color-grey: #e5e5e5;
+	--color-greyLight: #e5e5e5a8;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	font-family: Roboto;
+}
+
+i {
+	font-style: normal;
+}
+
+.searchBar {
+	display: flex;
+	justify-content: space-between;
+	padding: 15px;
+	align-items: center;
+	height: 70px;
+	position: sticky;
+	top: 0;
+	background: white;
+	i {
+		padding: 0 7.5px;
+	}
+	.logo {
+		display: flex;
+		align-items: center;
+		img {
+			width: 100px;
+			margin-left: 15px;
+		}
+	}
+	.search {
+		form {
+			border: 1px solid #ddd;
+			height: 35px;
+		}
+		input,
+		button {
+			border-radius: 0;
+			border: none;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		input {
+			width: 500px;
+		}
+	}
+}
+
+.mainBody {
+	height: calc(100vh - 70px);
+	display: flex;
+	overflow: hidden;
+}
+
+.categories {
+	width: 270px;
+	height: 100%;
+	overflow-y: scroll;
+	.categoriesSection {
+		display: flex;
+		flex-direction: column;
+		border-bottom: 1px solid var(--color-greyLight);
+		padding: 15px 0;
+		h3 {
+			font-size: 14px;
+			text-transform: uppercase;
+			margin: 0 25px 10px;
+		}
+	}
+	.category {
+		width: 100%;
+		display: flex;
+		padding: 12.5px 25px;
+		align-items: center;
+		cursor: pointer;
+		&.active {
+			background: var(--color-grey);
+			i {
+				color: red;
+			}
+		}
+		span {
+			font-size: 14px;
+		}
+		&:hover {
+			background: var(--color-greyLight);
+		}
+		i {
+			margin-right: 25px;
+		}
+	}
+}
+
+.videos {
+	background: var(--color-greyBg);
+	height: 100%;
+	width: 100%;
+	padding: 15px 25px;
+	overflow-y: scroll;
+	.videosGrid {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		.video {
+			width: calc(25% - 10px);
+			margin-bottom: 40px;
+			.thumbnail {
+				width: 100%;
+				height: 170px;
+				img {
+					height: 100%;
+					object-fit: cover;
+					width: 100%;
+				}
+			}
+			.author {
+				height: 40px;
+				width: 40px;
+				border-radius: 50%;
+				overflow: hidden;
+				margin-right: 10px;
+				img {
+					height: 100%;
+					object-fit: cover;
+					width: 100%;
+				}
+			}
+			.details {
+				display: flex;
+				padding-top: 10px;
+				.text {
+					display: flex;
+					flex-direction: column;
+					h3 {
+						margin: 0;
+						font-weight: 500;
+						font-size: 16px;
+					}
+					a {
+						color: inherit;
+						text-decoration: none;
+					}
+					a,
+					span {
+						font-size: 14px;
+						margin-top: 5px;
+					}
+				}
+			}
+		}
+	}
+}
