--- a/styles_v2.css
+++ b/styles_v2.css
@@ -122,10 +122,14 @@ main{
 }
 
 .videos {
- display: flex;
-  flex-direction: row;
-  juctify-content: space-around;
-  flex-wrap: wrap;
+   width: calc(100% - 250px);
+    margin-top: 120px;
+    margin-left: 250px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-gap: 20px 5px;
+    overflow-x: hidden;
 }
 
 .video{
