--- a/styles_v1.css
+++ b/styles_v1.css
@@ -64,10 +64,10 @@ hr {
 }
 
 .videos {
-  padding-left: 16%;
-  padding-right: 1%;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; /* Corrected typo here */
+  flex-wrap: wrap;
 }
 
 .video{
@@ -111,11 +111,13 @@ hr {
   display: block;
 }
   
-  .thumbnail {
-    position: relative;
-    display: flex;
-  }
-  
+.thumbnail {
+  width: 100%;
+  height: 170px;
+  border-radius: 2%; /* Corrected typo here */
+  overflow: hidden;
+}
+ 
   .thumbnail::before{
     content: attr(data-duration);
     position: absolute;
@@ -137,6 +139,11 @@ hr {
     background-color: #AAA;
   }
 
+.thumbnail-image img {
+  object-fit: cover;
+  height: 89%;
+  width: 100%;
+}
   .video-bottom-section{
     display: flex;
     align-items: flex-start;
