--- a/styles_v1.css
+++ b/styles_v1.css
@@ -65,9 +65,11 @@ hr {
 
 .videos {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  gap: 30px;
+  justify-content: space-around;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .video {
@@ -76,8 +78,22 @@ hr {
 
 .thumbnail {
   position: relative;
+  width: 100%;
+  height: 170px;
+  border-radius: 2%;
   overflow: hidden;
-  border-radius: 8px;
+}
+
+.thumbnail::before {
+  content: attr(data-duration);
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+  right: 5px;
+  bottom: 5px;
+  padding: 0.1em 0.3em;
+  border-radius: 0.3em;
+  font-size: 0.9em;
 }
 
 .thumbnail img {
@@ -88,30 +104,33 @@ hr {
 
 .details {
   display: flex;
-  flex-direction: column;
   margin-top: 10px;
 }
 
-.title {
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-bottom: 5px;
-  color: black;
-  text-decoration: none;
+.author img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }
 
-.author img {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  margin-right: 10px;
+.title {
+  display: flex;
+  flex-direction: column;
+}
+
+.title h3 {
+  color: rgb(3, 3, 3);
+  line-height: 18px;
+  font-size: 14px;
+  margin-bottom: 6px;
 }
 
 .title a,
 span {
-  font-size: 14px;
-  color: #555;
   text-decoration: none;
+  color: rgb(96, 96, 96);
+  font-size: 12px;
 }
 
 /* Search section styles */
@@ -162,6 +181,32 @@ input:focus {
   overflow-y: hidden;
 }
 
+/* Styles for the left section in the header */
+.left {
+  display: flex;
+  align-items: center;
+}
+
+.left #menu {
+  padding: 0 7px;
+  cursor: pointer;
+}
+
+/* Styles for the search input when focused */
+input:focus {
+  outline: none;
+  border: 1px solid #ddd;
+}
+
+.content {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  border-top: 1px solid #ddd;
+  overflow-y: scroll;
+}
+
 /* Media query for hiding the sidebar on small screens */
 @media (max-width: 768px) {
   .side-bar {
@@ -172,16 +217,13 @@ input:focus {
   }
   .main {
     flex-direction: column;
-    align-items: center;
   }
 
   .videos {
-    justify-content: center;
+    justify-content: flex-start;
   }
-}
 
-@media (max-width: 900px) {
   .search input {
-    width: 25rem;
+    width: 100%;
   }
 }
