--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@
   	top: 595px;
   	left: 0px;
   	background-color: #edf7fa;
-  	width: 1152px;
+  	width: 100%;
   	height: 396px;
 }
 .rectangle-div {
