--- a/index.css
+++ b/index.css
@@ -102,10 +102,12 @@
   	object-fit: cover;
 }
 .rectangle-section {
-  	position: relative;
+  	position: absolute;
+    top: 595px;
+    left: 0px;
     background-color: #edf7fa;
-    width: 100%;
-    height: 396px; 
+    width: 1152px;
+    height: 396px;
 }
 .rectangle-div {
   	position: absolute;
