--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@
     top: 595px;
     left: 0;
     background-color: #edf7fa;
-    width: 100%;
+    width: 1152px;
     height: 396px;
 }
 .rectangle-div {
