--- a/index.css
+++ b/index.css
@@ -104,9 +104,9 @@
 .rectangle-section {
   	position: absolute;
   	top: 595px;
-  	left: 0px;
+  	left: 0;
+    right: 0;
   	background-color: #edf7fa;
-  	width: 100vw;
   	height: 396px;
 }
 .rectangle-div {
