--- a/index.css
+++ b/index.css
@@ -102,12 +102,13 @@
   	object-fit: cover;
 }
 .rectangle-section {
-  	position: absolute;
-  	top: 595px;
-  	left: 0;
-    right: 0;
-  	background-color: #edf7fa;
-  	height: 396px;
+    position: absolute;
+    top: 595px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #edf7fa;
+    width: 100%;
+    height: 396px;
 }
 .rectangle-div {
   	position: absolute;
