--- a/index.css
+++ b/index.css
@@ -104,9 +104,10 @@
 .rectangle-section {
     position: absolute;
     top: 595px;
-    left: 0;
-    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: #edf7fa;
+    width: 100%;
     height: 396px;
 }
 .rectangle-div {
