--- a/index.css
+++ b/index.css
@@ -102,6 +102,10 @@
   	object-fit: cover;
 }
 .rectangle-section {
+    position: absolute;
+    top: 595px;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: #edf7fa;
     width: 100%;
     height: 396px;
