--- a/index.css
+++ b/index.css
@@ -104,10 +104,10 @@
 .rectangle-section {
     position: absolute;
     top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #edf7fa;
+    width: 100%;
     height: 396px;
 }
 .rectangle-div {
