--- a/index.css
+++ b/index.css
@@ -93,13 +93,10 @@
   	height: 21px;
 }
 .home-inner {
-  	position: absolute;
-  	top: 210px;
-  	left: 760px;
-  	border-radius: 50%;
-  	width: 243px;
-  	height: 243px;
-  	object-fit: cover;
+    position: relative;
+    background-color: #edf7fa;
+    width: 100%;
+    height: 396px;
 }
 .rectangle-section {
     position: absolute;
