--- a/index.css
+++ b/index.css
@@ -100,11 +100,10 @@
 }
 .rectangle-section {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 595px;
+    left: 0;
+    right: 0;
     background-color: #edf7fa;
-    width: 100%;
     height: 396px;
 }
 .rectangle-div {
